Finished inverted index, search, and top N